# VeeBee

./: Language-Spec.md  README.md
.github/workflows/: cmake-compile-linux.yml  cmake-single-platform.yml  ctest.yml
src/: CMakeLists.txt
src/backend/: veebee.c  veebee.h
src/backend/AST/Loose/: ast.h  ls_ast.c  ls_ast.h
src/backend/AST/Loose/Clauses/: arr_range_clause.h  as_clause.h  conditional_clause.h  dim_field_clause.h  else_clause.h  parameter_clause.h  type_field_clause.h
src/backend/AST/Loose/Expressions/: binary_expression.h  literal_expression.h  parenthesized_expression.h  reference_expression.h  unary_expression.h
src/backend/AST/Loose/Members/: function_member.h  module_member.h  sub_member.h  type_member.h
src/backend/AST/Loose/Statements/: assignment_statement.h  call_statement.h  dim_statement.h  do_statement.h  empty_statement.h  exit_statement.h  expression_statement.h  for_statement.h  goto_statement.h  if_statement.h  label_statement.h  redim_statement.h  select_statement.h  while_statement.h
src/backend/AST/Tight/: program_unit.c  program_unit.h  tg_ast.c  tg_ast.h
src/backend/AST/Tight/Expressions/: binary_expression.h  default_expression.h  ensure_type_expression.h  literal_expression.h  reference_expression.h  unary_expression.h
src/backend/AST/Tight/Statements/: assignment_statement.h  conditional_branch_statement.h  conditional_goto_statement.h  do_statement.h  for_statement.h  goto_statement.h  if_statement.h  initialize_statement.h  label_statement.h  proc_call_statement.h  return_statement.h  select_statement.h  while_statement.h
src/backend/AST/Tight/Symbols/: function_symbol.h  label_symbol.h  local_variable_symbol.h  module_symbol.h  parameter_symbol.h  procedure_symbol.h  subroutine_symbol.h  type_field_symbol.h  type_symbol.h
src/backend/Binder/: binder.c  binder.h  indexer.c  indexer.h  symbol_resolver.c  symbol_resolver.h  type_resolver.c  type_resolver.h
src/backend/Debug/: ansi.h  pretty_print.c  pretty_print.h
src/backend/Error/: error.c  error.h
src/backend/Interop/: interop.c  interop.h
src/backend/Lexer/: lexer.c  lexer.h  source.c  source.h  token.c  token.h
src/backend/Parser/: parser.c  parser.h
src/frontend/: cli.h  main.c
src/test/: CMakeLists.txt  lexer_source_tests.c  lexer_tests.c  test.h
